--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="tiendas.js"></script>
+    <script src="repasoExamen.js"></script>
 </body>
 </html>
